# notion-lite-mcp

./: .gitignore  README.md  cache.py  config.yaml.example  markdown.py  notion_api.py  pyproject.toml  requirements.txt  server.py  test_api.py
tests/: __init__.py  test_cache.py  test_markdown.py  test_notion_api.py  test_server.py
